v0.1.20 (2018-05-12)
- fix: Can't get passthrough to work #55
- cleanup single STRM creation (removed unapplicable prompts from process for a single file): catalog strms to false stops transcoding AND original streams being created #53
- fix for folders (not single STRM): catalog strms to false stops transcoding AND original streams being created #53
- add manual whitelist ip
- should whitelist local public IP for ffprobe requests
v0.1.18 (2018-05-02)
- add logic to override passthrough with forced transcode quality selection by cookie
- add support to quality selection cookie
- implemented: Using cookies to set preferred resolution #31
- implemented: Add a feature to disable access unless authenticated in emby #41
- add IPV6 support for emby IP filtering
- adapt emby IP filtering for cloudflare support
v0.1.17 (2018-05-01)
- enable emby IP filtering
v0.1.16 (2018-04-20)
- fix: auto detect for pycrypto #49
- fix: Auto default quality #50
- fix: Python crypto not found #44
- fix for displaying accounts on scheduler
- sync with recent KODI fixes
v0.1.15 (2018-03-29)
- fixes for building STRM in non-catalog mode
v0.1.14 (2018-03-25)
- building STRM - enable creation of google transcode STRM
- building STRM - add transcode, original, skip 0p flags, add resolution append message
- fix check fo 0p resolution
- force http to be generated in STRM files if absent in host variable
- make a change to forking logic
v0.1.12 (2018-03-21)
- change emby strm file creation from [#p].strm to - #p.strm
- ensure all team drives are fetched (fix pagination)
- add missing delete method
v0.1.11 (2018-03-19)
- implement: Error in last release 0.1.10 #43
- fix for DBM fetching of change token (moved out of buildstrm method)
- resolve deadlock issue with scheduler updating change tracking numbers
- activate the scheduler
- fix gplayer .play missing error
- fix for default.py in STRM folder creation
v0.1.10 (2018-03-14)
- implement: select stream quality #17